# src/controllers/auth.controller.js
@@ -12,6 +12,15 @@ const checkUserAndSetToken = require('../helpers/checkUserAndSetToken')
 module.exports = {
 
     login: async (req, res) => {
+
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'JWT: Login'
+            #swagger.description = 'Login with username and password'
+
+        */
+
+
         /*
         const { username, password } = req.body
 
@@ -76,6 +85,13 @@ module.exports = {
 
     refresh: async (req, res) => {
 
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'JWT: Refresh'
+            #swagger.description = 'Refresh accesToken with refreshToken'
+
+        */
+
         const refreshToken = req.body?.token?.refresh || null
 
         if (refreshToken) {
@@ -103,6 +119,14 @@ module.exports = {
     },
 
     logout: async (req, res) => {
+
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'JWT: Logout'
+            #swagger.description = 'No need any doing for logout. You must deleted Bearer Token from your browser.'
+
+        */
+
         res.send({
             error: false,
             message: 'No need any doing for logout. You must deleted Bearer Token from your browser.'
