# swagger.json
@@ -30,7 +30,11 @@
   "paths": {
     "/auth/login": {
       "post": {
-        "description": "",
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "JWT: Login",
+        "description": "Login with username and password",
         "responses": {
           "200": {
             "description": "OK"
@@ -40,7 +44,11 @@
     },
     "/auth/refresh": {
       "post": {
-        "description": "",
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "JWT: Refresh",
+        "description": "Refresh accesToken with refreshToken",
         "responses": {
           "200": {
             "description": "OK"
@@ -50,7 +58,11 @@
     },
     "/auth/logout": {
       "get": {
-        "description": "",
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "JWT: Logout",
+        "description": "No need any doing for logout. You must deleted Bearer Token from your browser.",
         "responses": {
           "200": {
             "description": "OK"
